<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".SetupActivity">




    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollview_setup"

        android:layout_above="@+id/next">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:padding="@dimen/default_padding"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_and_email_setup_screen"
                android:textColor="@color/black"
                android:textSize="@dimen/safeapp_text_size" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/Gray" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/primary_email"
                android:padding="@dimen/default_padding"
                android:textSize="@dimen/safeapp_text_size"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:singleLine="true"
                android:textColorHint="@color/Gray"
                android:textColor="@color/black"
                android:textSize="@dimen/safeapp_text_size"
                android:layout_marginLeft="@dimen/default_padding"
                android:layout_marginRight="@dimen/default_padding"
                android:layout_marginBottom="@dimen/default_padding"
                android:hint="@string/please_enter_primary_email"
                android:background="@color/transparent"
                android:id="@+id/primary_email" />


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/Gray" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/secondary_email"
                android:padding="@dimen/default_padding"
                android:textSize="@dimen/safeapp_text_size"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:singleLine="true"
                android:textColorHint="@color/Gray"
                android:textColor="@color/black"
                android:textSize="@dimen/safeapp_text_size"
                android:layout_marginLeft="@dimen/default_padding"
                android:layout_marginRight="@dimen/default_padding"
                android:layout_marginBottom="@dimen/default_padding"
                android:background="@color/transparent"
                android:hint="@string/please_enter_secondary_email"
                android:id="@+id/secondary_email" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/Gray" />


        </LinearLayout>
    </ScrollView>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_safeapp_height"
        android:layout_alignParentBottom="true"
        android:text="@string/next"
        android:textColor="@color/White"
        android:textStyle="bold"
        android:textSize="@dimen/title_safeapp_text_size"
        android:background="@color/Gray"
        android:id="@+id/next" />

</RelativeLayout>